# rust_wasm_web

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: index.css  index.html  lib.rs
