[package]
name = "rust_wasm_web"
version = "0.1.0"
authors = ["Don McCaughey <don@donm.cc>"]

[lib]
crate-type = ["cdylib"]
name = "web_client"

[dependencies]
js-sys = "0.3.2"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.2"
features = [
    "console",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlElement",
    "HtmlFormElement",
    "HtmlInputElement",
    "Window",
]

